# sov-deb

./: Cargo.toml  README.md  constants.json
.cargo-husky/hooks/: applypatch-msg.sample  commit-msg  fsmonitor-watchman.sample  post-merge  post-update.sample  pre-applypatch.sample  pre-commit  pre-merge-commit.sample  pre-push.sample  pre-rebase  pre-receive.sample  prepare-commit-msg.sample  push-to-checkout.sample  sendemail-validate.sample  update.sample
src/: call.rs  event.rs  genesis.rs  lib.rs  query.rs
tests/: tacc_test.rs
