[package]
name = "sov-deb"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["arj <arj@workingdoge.com>"]
readme = "README.md"
publish = false
resolver = "2"
rust-version = "1.73"

[lints.rust]
dead_code = "deny"
non_ascii_idents = "deny"

[lints.clippy]
debug_assert_with_mut_call = "deny"
inefficient_to_string = "deny"
map_flatten = "deny"
manual_ok_or = "deny"
doc_link_with_quotes = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"
float_arithmetic = "deny"

[dependencies]
sov-modules-api = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "9451c4271f952edc57d6665041e74be783019ef3" }
sov-state = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "9451c4271f952edc57d6665041e74be783019ef3" }

anyhow = "1.0.68"
borsh = { version = "1", features = ["rc"] }
serde = { version = "1.0.192", features = ["derive", "rc"] }
ethnum = { version = "1.5.0", features = ["serde"] }
jsonrpsee = { version = "0.22.5", features = ["jsonrpsee-types"] }

arbitrary = { version = "1.3", optional = true }
proptest = { version = "1.5", optional = true }
proptest-derive = { version = "0.5", optional = true }
schemars = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3.5"
sov-test-utils = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "9451c4271f952edc57d6665041e74be783019ef3" }
sov-prover-storage-manager = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "9451c4271f952edc57d6665041e74be783019ef3", features = [
  "test-utils",
] }

[features]
default = []
arbitrary = [
  "dep:arbitrary",
  "dep:proptest",
  "dep:proptest-derive",
  "sov-modules-api/arbitrary",
  "sov-state/arbitrary",
  "sov-test-utils/arbitrary",
]
native = ["schemars", "sov-modules-api/native", "sov-state/native"]
